syntax = "proto3";
package Database_Service.Grpc.DataServices;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message DataServiceRequest {
   int32 Id = 1;
}
message DataServiceRequestWithEntity_Wallet {
   int32 Id = 1;
   Wallet Data = 2;
}
message DataServiceResponse_Wallet {
   bool IsSuccess = 1;
   string Message = 2;
   Wallet Data = 3;
}
message Wallet {
   int32 Id = 1;
   int32 CarbonPoint = 2;
   .bcl.DateTime CreatedAt = 3;
   .bcl.DateTime UpdatedAt = 4;
   int32 UserId = 5;
}
service WalletDataService {
   rpc Create (DataServiceRequestWithEntity_Wallet) returns (DataServiceResponse_Wallet);
   rpc Delete (.google.protobuf.Empty) returns (DataServiceResponse_Wallet);
   rpc Get (DataServiceRequest) returns (DataServiceResponse_Wallet);
   rpc Update (DataServiceRequestWithEntity_Wallet) returns (DataServiceResponse_Wallet);
}
